<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login Screen"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/regular_margin"/>
    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_margin="@dimen/regular_margin"/>
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_margin="@dimen/regular_margin"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/regular_margin"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/btnShowData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_saved_data"
        android:textAllCaps="false"
        android:layout_marginRight="@dimen/regular_margin"
        android:layout_marginLeft="@dimen/regular_margin"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>